// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.js 1`] = `
"/* @format */
import { map, pick, zip } from \\"lodash\\";

"
`;

exports[`comments-in-between.js 1`] = `
"// 1 - zippy
import { map, pick, zip } from \\"lodash\\";

"
`;
